<resources>
    <string name="app_name">The Teleprompter</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_slide_show">SlideShowActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="banner_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="testad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="fire">Select</string>
    <string name="cancel">Cancel</string>
    <string name="font_size_label">Font Size</string>
    <string name="default_btn">Set as Default</string>
    <string name="doc_detail_title_hint">Title</string>
    <string name="detail_text_hint">Insert Text Here</string>
    <string name="background_color_label">Background color</string>
    <string name="scroll_speed_label">Scroll Speed</string>
    <string name="slide_show_play_btn_label">Play</string>
    <string name="slide_show_pause_button">Pause</string>
    <string name="countdown_start">3</string>
    <string name="title_activity_settings">Settings</string>

    <!--Important Firebase connectivity ids-->
    <string name="webclient_server_id" translatable="false">644889287337-hoiqaclr3otr975103s7mc2sc1n51vha.apps.googleusercontent.com</string>
    <!--AdMob-->
    <string name="admob_app_id">
       ca-app-pub-4640678949548266~5677337553</string>
    <string name="admob_main_banner_id">ca-app-pub-4640678949548266/9088849394</string>
    <string name="admob_interstital_ad_id">ca-app-pub-4640678949548266/5417508752</string>
    <!-- Strings related to Settings -->


    <!--    Preference Keys     -->
    <string name="pref_text_color_key" translatable="false">preff_text_color_key</string>
    <string name="pref_background_color_key" translatable="false">preff_bg_color_key</string>
    <string name="pref_fontsize_key" translatable="false">pref_font_size_key_string</string>
    <string name="pref_mirror_text_key" translatable="false">pref_mirror_text_key</string>
    <string name="pref_speed_key" translatable="false">pref_speed_key_string</string>
    <string name="pref_uid_key" translatable="false">pref_uid_key_string</string>
    <string name="pref_user_name_key" translatable="false">pref_username_key_string</string>
    <string name="pref_email_key" translatable="false">pref_email_key_string</string>
    <string name="pref_last_id_key" translatable="false">pref_last_id_key_string</string>
    <string name="pref_last_cloudId_key" translatable="false">pref_last_cloudid_key_string</string>
    <string name="pref_pinned_doc_key" translatable="false">pref_pinned_doc_string</string>
    <string name="pref_ad_increment_key" translatable="false">pref_ad_inccrement_key</string>

    <string name="action_logout">Logout</string>

    <string name="pref_fontsize_label_small">Small</string>
    <string name="pref_fontsize_label_medium">Medium</string>
    <string name="pref_fontsize_label_large">Large</string>
    <string name="pref_fontsize_label_xlarge">Extra Large</string>


    <string name="pref_speed_label_1">1</string>
    <string name="pref_speed_label_2">2</string>
    <string name="pref_speed_label_3">3</string>
    <string name="pref_speed_label_4">4</string>
    <string name="pref_speed_label_5">5</string>


    <string name="pref_fontsize_small_value">0</string>
    <string name="pref_fontsize_medium_value">1</string>
    <string name="pref_fontsize_large_value">2</string>
    <string name="pref_fontsize_xlarge_value">3</string>

    <string name="pref_speed_value_1">0</string>
    <string name="pref_speed_value_2">1</string>
    <string name="pref_speed_value_3">2</string>
    <string name="pref_speed_value_4">3</string>
    <string name="pref_speed_value_5">4</string>


    <string name="pref_fontsize_title">Default Font Size</string>
    <string name="pref_mirror_text_title">Mirror Text</string>
    <string name="pref_speed_title">Default Scroll Speed</string>
    <string name="pref_mirror_text_summary_on">Mirrored</string>
    <string name="pref_mirror_text_summary_off">Not Mirrored</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="the_teleprompter">The Teleprompter</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="full_name">Full name</string>
    <string name="sync_docs">Sync Docs</string>
    <string name="card_tranisiton">card_transition_name</string>
    <string name="label_or">OR</string>

    <string name="error_password_nomatch">The passwords do not match</string>
    <string name="error_long_name">Full name should be less than 60 characters</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="forgot_pass_string">Forgot Password ?</string>

    <string name="send_email">Send Email</string>
    <string name="reset_password_dialog_message">A password reset link will be sent to your registered email Id.
        Follow the instructions in the link to reset your password.
    </string>

    <!--Forgot email dialog -->
    <string name="reset_password_dialog_emailnotfound">No registered account found with this email. Please sign up or try another email
    </string>
    <string name="reset_password_dialog_email_error">An unexpected error occured while sending the email.
        Please try again
    </string>

    <string name="reset_password_dialog_email_sent">Email Sent</string>

    <string name="action_delete">Delete</string>
    <string name="action_share">Share</string>
    <string name="card_transition_2">card_transition_2</string>


    <!--Request internet dialog-->
    <string name="request_internet_dialog_title">Internet Connection Required</string>
    <string name="request_internet_dialog_text">An active internet connection is required to proceed. Would you like to turn on the internet? </string>
    <string name="request_internet_dialog_positive">Yes</string>
    <string name="request_internet_dialog_negative">No</string>

    <!--Sign up activity snackbar messages  -->
    <string name="account_exists_message">Account already exists! Please sign in</string>
    <string name="authentication_failed">An unexpected error occurred. Please try again</string>

    <!--Main Activity snackbar messages-->
    <string name="main_no_pinned_docs_msg">No Docs have been pinned. Please pin a Doc!</string>

    <!--Login Activity Snackbars-->
    <string name="login_incorrect_password">Password is incorrect. Please try again</string>
    <string name="login_account_not_exists">No account exists with this email</string>

    <string name="email_verification_msg">An email has been sent to %1$s. Follow the instructions in the mail to verify your account. Hit next after completing the email verification!</string>

    <string name="email_verification_resend_mail">Didn\'t receive an email? </string>
    <string name="resend_email_btn_txt">RESEND EMAIL</string>

    <string name="email_unverified">Email not verified. Please follow the instructions sent on your email to complete the verification.</string>
    <string name="empty_cursor_msg">You currently don\'t have any docs to display. Create a new doc by clicking the Add(+) button.</string>
    <string name="verification_thanks">Thank you for verifying your email!</string>
    <string name="open_email">Open Email</string>
    <string name="letter_r">R</string>
    <string name="letter_green">G</string>
    <string name="letter_b">B</string>
    <string name="text_color_label_text">Text color</string>
    <string name="cd_app_icon">App icon</string>
    <string name="cd_create_doc">Create a new Document</string>
    <string name="cd_email_img">Email Image</string>
    <string name="cd_email_verified_img">Email Verified Image</string>
    <string name="cd_edit_pin_doc">Edit Pinned Doc</string>
    <string name="cd_play_pin_doc">Play Pinned Document</string>
    <string name="cd_background_color_chooser">Choose Background color</string>
    <string name="cd_play_btn">Play Document</string>
    <string name="scroll_speed_selector">Scroll Speed Selector</string>
    <string name="cd_text_color_selector">Choose Text Color</string>
    <string name="cd_font_size_selector">Font size selector</string>



    <!--Delete Confirmation Dialog Fragment -->
    <string name="delete_confm_title">Delete</string>
    <string name="delete_confm_msg">Are you sure you want to delete %1$s ?</string>
    <string name="cd_pin_doc">Pin this document</string>
    <string name="cd_email_verification_image">Email Verification Image</string>
    <string name="cd_email_verified_image">Email Successfully Verified image</string>

</resources>
