<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".LoginActivity"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:id="@+id/login_container">

    <!-- Login progress -->


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_72"
        android:background="@color/colorPrimary"
        android:padding="16dp"
        android:id="@+id/app_banner_view"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/the_teleprompter"
            android:textSize="32sp"
            android:textColor="@color/colorWhite"
            android:gravity="bottom"
            android:layout_marginStart="@dimen/dimen_16"
            android:layout_marginLeft="@dimen/dimen_16"
            android:textStyle="bold"/>

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/login_progress"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_8"
            android:layout_gravity="center"
            android:gravity="center"/>
    </FrameLayout>
    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_24"
        android:padding="@dimen/activity_horizontal_margin">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/dimen_40"
                android:layout_height="@dimen/dimen_40"
                app:srcCompat="@drawable/ic_app_icon"
                android:layout_gravity="center"
                android:contentDescription="@string/cd_app_icon"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_16"
                android:layout_marginEnd="@dimen/dimen_16"
                >

                <android.support.v7.widget.AppCompatAutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_16"
                android:layout_marginEnd="@dimen/dimen_16">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/email_sign_in_button"
                android:background="@color/colorPrimary"
                android:textColor="@color/colorWhite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/action_sign_in"
                android:layout_margin="@dimen/dimen_16"
                />


            <TextView
                android:id="@+id/forgot_pass_text"
                android:gravity="center"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgot_pass_string"
                />

        </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_margin="@dimen/dimen_16"
                android:gravity="center_horizontal">

                <View
                    android:layout_width="100dp"
                    android:layout_height="1dp"
                    android:layout_margin="@dimen/dimen_16"
                    android:background="@color/colorPrimaryLight"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_or"/>

                <View
                    android:layout_width="100dp"
                    android:layout_height="1dp"
                    android:layout_margin="@dimen/dimen_16"
                    android:background="@color/colorPrimaryLight"
                    />

            </LinearLayout>

            <com.google.android.gms.common.SignInButton
                android:id="@+id/google_sign_in_button"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_marginStart="@dimen/dimen_16"
                android:layout_marginEnd="@dimen/dimen_16"
                android:layout_height="wrap_content" />

            <Button
                android:layout_marginTop="@dimen/dimen_16"
                android:layout_marginStart="@dimen/dimen_16"
                android:layout_marginEnd="@dimen/dimen_16"
                android:id="@+id/sign_up_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:background="@color/colorPrimaryDark"
                android:text="@string/action_sign_up"
                />


        </LinearLayout>
    </ScrollView>
</LinearLayout>